--- a/ch5/CH5EX3.html
+++ b/ch5/CH5EX3.html
@@ -53,8 +53,9 @@ function canvasApp() {
 	}
 	var speed = 5;
 	var p1 = {x:20,y:20};
-	var angle = 45;
+	var angle = 25;
 	var radians = angle * Math.PI/ 180;
+	console.log('radians =>', radians);
 	var xunits = Math.cos(radians) * speed;
 	var yunits = Math.sin(radians) * speed;
 	var ball = {x:p1.x, y:p1.y};
