--- a/ch5/CH5EX7.html
+++ b/ch5/CH5EX7.html
@@ -230,9 +230,9 @@ function canvasApp() {
 			tempSpeed = 5;
 
 			/* horizontal */
-			// tempX = i === 1 ? tempRadius : theCanvas.width - tempRadius;
-			// tempY = theCanvas.height / 2;
-			// tempAngle =  i === 1 ? 180 : 0;
+			tempX = i === 1 ? tempRadius : theCanvas.width - tempRadius;
+			tempY = theCanvas.height / 2;
+			tempAngle =  i === 1 ? 180 : 0;
 
 			/* vertical */
 			// tempX = theCanvas.height / 2;
@@ -240,9 +240,9 @@ function canvasApp() {
 			// tempAngle =  i === 1 ? 90 : 270;
 
 			/* 45 degree */
-			tempX = i === 1 ? tempRadius : theCanvas.width - tempRadius;
-			tempY = i === 1 ? tempRadius : theCanvas.height - tempRadius;
-			tempAngle =  i === 1 ? 315 : 45;
+			// tempX = i === 1 ? tempRadius : theCanvas.width - tempRadius;
+			// tempY = i === 1 ? tempRadius : theCanvas.height - tempRadius;
+			// tempAngle =  i === 1 ? 315 : 45;
 
 			tempRadians = tempAngle * Math.PI/ 180;
 			// tempvelocityx = 0;
