--- a/ch5/CH5EX9.html
+++ b/ch5/CH5EX9.html
@@ -5,7 +5,7 @@
 <title>CH5EX9: Moving In Circle</title>
 <script src="modernizr-1.6.min.js"></script>
 <script type="text/javascript">
-window.addEventListener('load', eventWindowLoaded, false);	
+window.addEventListener('load', eventWindowLoaded, false);
 function eventWindowLoaded() {
 	canvasApp();
 
@@ -16,51 +16,65 @@ function canvasSupport () {
 }
 
 function canvasApp() {
-	
+
   if (!canvasSupport()) {
-			 return;
-  		}
+		return;
+	}
+
+	var pointImage = new Image();
+  pointImage.src = "point.png";
 
   function  drawScreen () {
 
 		context.fillStyle = '#EEEEEE';
 		context.fillRect(0, 0, theCanvas.width, theCanvas.height);
 		//Box
-		context.strokeStyle = '#000000'; 
+		context.strokeStyle = '#000000';
 		context.strokeRect(1,  1, theCanvas.width-2, theCanvas.height-2);
-		
+
 		ball.x = circle.centerX + Math.cos(circle.angle) * circle.radius;
 		ball.y = circle.centerY + Math.sin(circle.angle) * circle.radius;
-		
+
 		circle.angle += ball.speed;
-	
+
+		//Draw points to illustrate path
+		if (points.length >= 50) {
+			points.shift();
+		}
+		points.push({x:ball.x,y:ball.y});
+		for (var i= 0; i< points.length; i++) {
+			context.drawImage(pointImage, points[i].x, points[i].y,1,1);
+		}
+
 		context.fillStyle = "#000000";
 		context.beginPath();
 		context.arc(ball.x,ball.y,15,0,Math.PI*2,true);
 		context.closePath();
 		context.fill();
-	
+
 	}
-	
+
 	var radius = 100;
-	var circle = {centerX:250, centerY:250, radius:125, angle:0}
-	var ball = {x:0, y:0,speed:.1};
-		
-    theCanvas = document.getElementById('canvasOne');
+	var circle = { centerX: 250, centerY: 250, radius: 125, angle: 0 };
+	// radian = degree * Math.PI/ 180;
+	var ball = { x: 0, y: 0, speed: .1 };
+	var points = new Array();
+
+	theCanvas = document.getElementById('canvasOne');
 	context = theCanvas.getContext('2d');
-	
-	setInterval(drawScreen, 33);	
-	
+
+	setInterval(drawScreen, 33);
+
 }
 
 </script>
 
 </head>
-<body>  
+<body>
 <div style="position: absolute; top: 50px; left: 50px;">
 
 <canvas id="canvasOne" width="500" height="500">
- Your browser does not support the HTML 5 Canvas. 
+ Your browser does not support the HTML 5 Canvas.
 </canvas>
 </div>
 
